<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Implicit Intent 2</string>
    <string name="action_settings">Settings</string>
    <string name="header">Implicit Intent</string>
    <string name="button_search">Search the web</string>
    <string name="button_call">Call</string>
    <string name="button_map">Start map</string>
    <string name="button_audio">Acquire audio files</string>
    <string name="button_image">Acquire image files</string>

</resources>
